--- a/test_nuclei_qemu_32/meson.build
+++ b/test_nuclei_qemu_32/meson.build
@@ -7,15 +7,13 @@ subdir( 'application' )
 subdir( 'driver' )
 subdir( 'src' )
 
-#add_project_arguments('-march=rv64imafdc' ,'-mabi=lp64d','-fno-omit-frame-pointer', '-nostartfiles', '-MD', '-mcmodel=medany', '-ffreestanding', '-fno-common' ,'-nostdlib', '-mno-relax', language: 'c')
-add_project_arguments('-march=rv32imafdc' ,'-mabi=ilp32d', '-mcmodel=medany','-ffunction-sections', '-fdata-sections', '-fno-common', language: 'c')
+add_project_arguments('-march=rv32imac' ,'-mabi=ilp32', '-nostartfiles','-mcmodel=medany','-ffunction-sections', '-fdata-sections', '-fno-common', language: 'c')
 
 linker_script = join_paths(meson.current_source_dir(), 'link.ld')
 
-add_project_link_arguments('-T', linker_script , '-march=rv32imafdc' ,'-mabi=ilp32d','-mcmodel=medany', language: 'c')
+add_project_link_arguments('-T', linker_script , '-march=rv32imac' ,'-nostartfiles','-mabi=ilp32','-mcmodel=medany', language: 'c')
 
-#add_project_arguments('-DQEMU_GD32VF=1', language: 'c')
-add_project_arguments('-DQEMU_VIRT=1', language: 'c')
+add_project_arguments('-DQEMU_GD32VF=1', language: 'c')
 
 exe = executable('virt_test.elf', sources, include_directories:[inc])
 
