--- a/test_nuclei_qemu_32/application/meson.build
+++ b/test_nuclei_qemu_32/application/meson.build
@@ -1,4 +1,5 @@
 sources += files('main.c')
+sources += files('dsp.c')
 sources += files('printf/printf.c')
 inc += include_directories('.')
 inc += include_directories('printf')
